--- a/doc/bugs/login_page_should_note_cookie_requirement.mdwn
+++ b/doc/bugs/login_page_should_note_cookie_requirement.mdwn
@@ -4,6 +4,9 @@ At the moment, you go through the login shuffle and then are told that cookies a
 > websites that have a login require cookies. Such warnings used to be
 > common, but few sites bother with them anymore. --[[Joey]]
 
+>> Very few websites break without cookies.  Even fewer lose data.
+>> Can ikiwiki avoid being below average by default? --[MJR](http://mjr.towers.org.uk)
+
 Even better would be to only display the cookie note as a warning if the login page doesn't receive a session cookie.
 
 > I considered doing this before, but it would require running the cgi once
@@ -15,3 +18,5 @@ Best of all would be to use URL-based or hidden-field-based session tokens if co
 
 > This is not very doable since most of the pages the user browses are
 > static pages in a static location.
+
+>> The pages that lose data without cookies (the edit pages, primarily) don't look static. Are they really? --[MJR](http://mjr.towers.org.uk)
