wishlist from IRC

--- a/doc/plugins/contrib/comments.mdwn
+++ b/doc/plugins/contrib/comments.mdwn
@@ -204,3 +204,12 @@ Known issues:
 
 > I haven't done a detailed code review, but I will say I'm pleased you
 > avoided re-implementing inline! --[[Joey]]
+
+Wishlist:
+
+* tbm would like anonymous people to be able to enter their name and possibly email
+  address
+* smcv would like an indication of who you're posting as / the ability to log in
+  as someone else (even if anonymous comments are allowed, it'd be nice to be
+  able to choose to log in with a username or OpenID, like in Livejournal);
+  perhaps editpage needs this too
