--- a/doc/TourBusStop.mdwn
+++ b/doc/TourBusStop.mdwn
@@ -28,3 +28,6 @@ Famous sights to visit here at **ikiwiki**
 * [[ikiwikiusers]]: The list of projects, personal sites, and blogs that use ikiwiki.
 * [[plugins]]: See the many ways people have extended ikiwiki.
 * [[examples]]: Example sites built using ikiwiki.
+
+Other Websites:
+*<a href="http://www.ukulc.com/">Language Translation</a>
