--- a/doc/TourBusStop.mdwn
+++ b/doc/TourBusStop.mdwn
@@ -29,5 +29,11 @@ Famous sights to visit here at **ikiwiki**
 * [[plugins]]: See the many ways people have extended ikiwiki.
 * [[examples]]: Example sites built using ikiwiki.
 
-Other Websites:
+
+==========================================
+<b>Ikiwiki TourBus Stop Educational Links: </b>
+
+*<a href="http://www.hbs.edu/">Harvard Business School</a>
+*<a href="http://www.virginia.edu/">University of Virginia</a>
+*<a href="http://www.stanford.edu/">Stanford University</a>
 *<a href="http://www.ukulc.com/">Language Translation</a>
