--- a/doc/TourBusStop.mdwn
+++ b/doc/TourBusStop.mdwn
@@ -30,10 +30,10 @@ Famous sights to visit here at **ikiwiki**
 * [[examples]]: Example sites built using ikiwiki.
 
 
-==========================================
-<b>Ikiwiki TourBus Stop Educational Links: </b>
-
-*<a href="http://www.hbs.edu/">Harvard Business School</a>
-*<a href="http://www.virginia.edu/">University of Virginia</a>
-*<a href="http://www.stanford.edu/">Stanford University</a>
-*<a href="http://www.ukulc.com/">Language Translation</a>
+<h1>Ikiwiki TourBus Stop Educational Links: </h1>
+<ul>
+<li><a href="http://www.hbs.edu/">Harvard Business School</a></li>
+<li><a href="http://www.virginia.edu/">University of Virginia</a></li>
+<li><a href="http://www.stanford.edu/">Stanford University</a></li>
+<li><a href="http://www.ukulc.com/">Language Translation</a></li>
+</ul>
