--- a/doc/users/ajt.mdwn
+++ b/doc/users/ajt.mdwn
@@ -2,7 +2,7 @@
 
 # Adam Trickett
 
-## ajt
+## "ajt"
 
 I'm a long time hacker of sorts, I like to program in Perl on Debian systems but work pays me to program in ABAP (COBOL) on SAP.
 
