--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ikiwiki (2.71) UNRELEASED; urgency=low
     produced by aggregate and recentchanges.
   * French translation update from Philippe Batailler. Closes: #506250
   * Spanish translation update from Victor Moral.
+  * Fix handling of wrappergroup option.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
 
